--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "node index.js"
   },
   "author": "",
   "license": "ISC",
