--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
     "version": 2,
-    "build": 
-    {
-        "src": "./index.js",
-        "use": "@vercel/node"
-    },
+    "build":
+        {
+            "src": "index.js",
+            "use": "@now/node"
+        }
+    ,
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/"
+            "dest": "index.js"
         }
     ]
 }
